# primer-identity/openapi.yaml
@@ -116,6 +116,48 @@ info:
   version: 0.1.0
 openapi: 3.1.0
 paths:
+  /.well-known/jwks.json:
+    get:
+      operationId: jwks
+      responses:
+        "200":
+          description: OK
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+        "503":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Service Unavailable
+      summary: JSON Web Key Set
+      tags:
+        - OAuth
+  /.well-known/oauth-authorization-server:
+    get:
+      operationId: oauthAuthorizationServer
+      responses:
+        "200":
+          description: OK
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+        "503":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Service Unavailable
+      summary: OAuth authorization server metadata
+      tags:
+        - OAuth
   /broker/stytch/callback:
     get:
       operationId: brokerCallback
